<resources>
    <string name="app_name">Smart Neck</string>
    <string name="login_login">Sign in</string>
    <string name="login_sign_up">Register</string>
    <string name="login_find">Forgot account?</string>
    <string name="login_insert_id">Please enter your email address</string>
    <string name="login_insert_pw">Please enter your password</string>
    <string name="login_auto_login">Automatic sign-in</string>
    <string name="ble_list">Bluetooth list</string>
    <string name="ble_connect">Connect</string>
    <string name="menu_chair">Seat</string>
    <string name="menu_weight">Weight</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_report">Report errors</string>
    <string name="menu_age">Neck muscle age</string>
    <string name="menu_flexibility">Pliability</string>
    <string name="menu_statistics">Records</string>
    <string name="menu_logout">Sign out</string>
    <string name="menu_management"></string>
    <string name="menu_announce">Announcements</string>
    <string name="menu_review">User reviews</string>
    <string name="menu_support">Customer support</string>
    <string name="menu_user_info">Personal information</string>
    <string name="menu_device_info">Product information</string>
    <string name="menu_start">Start</string>
    <string name="menu_exercise_setting">Exercise settings</string>
    <string name="menu_exercise_setting2">settings</string>
    <string name="menu_how_to_exercise">Exercise methods</string>
    <string name="menu_sub_exercise">Supplementary\nexercise</string>
    <string name="menu_home">Home</string>
    <string name="measure_chair_height">Seat\'s height</string>
    <string name="measure_chair_message">Please adjust the seat’s height accordingly to maximize your exercise experience.</string>
    <string name="measure_flexibility">Pliability measure</string>
    <string name="measure_flexibility_message">Please follow the picture instructions and bend your neck backwards 3 to 5 times.</string>
    <string name="measure_muscle_message">Please follow the instruction audio to bend your neck backwards 3 to 5 times.</string>
    <string name="measure_flexibility_max">Highest (inch)</string>
    <string name="measure_flexibility_current">Pliability(inch)</string>
    <string name="measure_max_weight">Weight(lb)</string>
    <string name="measure_weight_title">Muscular strength measure</string>
    <string name="measure_weight">Weight(level)</string>
    <string name="exercise_setting_count">Count</string>
    <string name="exercise_setting_set">Set</string>
    <string name="exercise_setting_stop">Still time</string>
    <string name="exercise_setting_voice_guide">Instruction audio</string>
    <string name="exercise_title">Start exercise</string>
    <string name="exercise_max_weight">Weight(lb)</string>
    <string name="exercise_stop_time">Still time(sec)</string>
    <string name="exercise_muscle">Muscular strength</string>
    <string name="exercise_count">Count</string>
    <string name="exercise_set">Set</string>
    <string name="e_alert_title">Today\'s exercise records</string>
    <string name="e_alert_message">Excellent job!</string>
    <string name="e_alert_count">Count</string>
    <string name="e_alert_set">Set</string>
    <string name="e_alert_stop">Still time</string>
    <string name="sign_up_title">Register</string>
    <string name="sign_up_id">E-mail</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_Password">Password</string>
    <string name="sign_up_Confirm">Please confirm your password.</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_last_name">Last name</string>
    <string name="sign_up_first_name">First name</string>
    <string name="sign_up_middle_name">Middle name</string>
    <string name="sign_up_birth">Birthday</string>
    <string name="sign_up_gender">Gender</string>
    <string name="sign_up_name_hint">Please enter your name.</string>
    <string name="sign_up_select">Please select</string>
    <string name="sign_up_password_hint">Password (Use 8 or more characters)</string>
    <string name="sign_up_phone">Cellphone number</string>
    <string name="sign_up_survay">Questionnaire</string>
    <string name="sign_up_message">Have you ever visited a doctor due to neck pains?</string>
    <string name="sign_up_yes">Yes</string>
    <string name="sign_up_no">No</string>
    <string name="sign_up_option1">In the past 3 months</string>
    <string name="sign_up_option2">In the past 6 months</string>
    <string name="sign_up_option3">In the past 1 year</string>
    <string name="sign_up_option4">Over 1 year ago</string>
    <string name="sign_up_agreement">Terms of use</string>
    <string name="sign_up_agree_all">Agree to all terms</string>
    <string name="sign_up_option1_title">Personal information handling policy (Must)</string>
    <string name="sign_up_option1_check">Personal information handling policy (Must)</string>
    <string name="sign_up_option2_title">Terms of use (Must)</string>
    <string name="sign_up_option2_check">Terms of use (Must)</string>
    <string name="sign_up_option3_title">Precautions (Must)</string>
    <string name="sign_up_option3_check">Precautions (Must)</string>
    <string name="sign_up_option4_title">Marketing events sending and receiving agreement (Select)</string>
    <string name="sign_up_option4_check">Marketing events sending and receiving agreement (Select)</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_close">Close</string>
    <string name="btn_complete">Submit</string>
    <string name="btn_start">Start</string>
    <string name="btn_save">Save</string>
    <string name="btn_measure">Measure</string>
    <string name="type_male">Male</string>
    <string name="type_female">Female</string>
    <string name="type_child">Child</string>
    <string name="toast_saved">Saved.</string>
    <string name="toast_please_connect">Please connect your bluetooth.</string>
    <string name="toast_back">Please press the stop button to end the APP.</string>
    <string name="toast_internet">The internet is not connected.</string>
    <string name="toast_max">Highest number</string>
    <string name="toast_min">Lowest number</string>
    <string name="toast_measure_height">Please begin pliability measure.</string>
    <string name="toast_measure_weight">Please begin muscular strength measure.</string>
    <string name="toast_insert_email">Please enter your ID.</string>
    <string name="toast_exist_account">The account has been registered.</string>
    <string name="toast_insert_all_password">Please enter the password</string>
    <string name="toast_discord_password">Those passwords didn\'t match.</string>
    <string name="toast_insert_name">Please enter your name.</string>
    <string name="toast_select_gender">Please enter your gender.</string>
    <string name="toast_insert_birth">Please enter your birthday.</string>
    <string name="toast_insert_phone_number">Please enter your cellphone number.</string>
    <string name="toast_please_check">Please click the boxes.</string>
    <string name="toast_please_agree">Please click to agree to the terms.</string>
    <string name="toast_sign_up_complete">Registeration completed</string>
    <string name="toast_preparing">Preparing.</string>
    <string name="toast_mail">Please enter the correct email address.</string>
    <string name="toast_pw">Please use 8 or more characters as your password.</string>
    <string name="toast_name">Please enter the correct name.</string>
    <string name="toast_enter_check">Please confirm the information you entered.</string>
    <string name="toast_disconnect">Bluetooth was disconnected.</string>
    <string name="toast_password_changed">Your password has been changed.</string>
    <string name="dialog_ble_connecting">Connecting bluetooth. Please wait a moment.</string>
    <string name="dialog_ble_init">Adjusting the location. Please wait a moment.</string>
    <string name="dialog_exercise_start">Starting exercise. Please wait a moment.</string>
    <string name="dialog_height">Measuring pliability. Please wait a moment.</string>
    <string name="dialog_weight">Measuring muscular strength. Please wait a moment.</string>
    <string name="dialog_count">Valid rep. Bending the cushion over set bending percentage according to your measured pliability will be considered as a valid count. You will hear a ding sound if it is valid. Bending the cushion below set bending percentage will not be considered as valid, thus, you will not hear any sound.</string>
    <string name="dialog_set">If you choose 1 set, you will do the reps you chose once. 2 sets means that you will do the reps you chose twice.</string>
    <string name="dialog_stop">It refers to the freeze time when you bend your neck to the lowest point according to the set bending percentage. Please take a deep breath during still time as holding back may affect the result.</string>
    <string name="dialog_voice_guide">The narrator\'s voice you near during exercise</string>
    <string name="user_info_edit_pw">Change your password</string>
    <string name="user_info_edit_pw_current_pw">Current password</string>
    <string name="user_info_edit_pw_current_pw_hint">Please enter your current password.</string>
    <string name="user_info_edit_pw_new_pw">New password</string>
    <string name="user_info_edit_pw_new_pw_hint">Please enter new password.</string>
    <string name="user_info_edit_pw_confirm_pw_hint">Please confirm new password.</string>
    <string name="ble_connect_title">Bluetooth Connect</string>
    <string name="load_backup_data">Load Backup Data</string>
    <string name="join_account">Account</string>
    <string name="join_account_hint">Please enter your account.</string>
    <string name="join_password">Password</string>
    <string name="join_passwrod_hint">Please enter a password.</string>
    <string name="join_data_backup">Data backup</string>
    <string name="join_data_backup_message">If data is not backed up, it is impossible to recover lost data.</string>
    <string name="join_country">Country</string>
    <string name="join_mutual">Mutual</string>
    <string name="join_mutual_hint">Please enter your business name.</string>
    <string name="join_name_1">Name (representative)</string>
    <string name="join_name_1_hint">Please enter your name (representative).</string>
    <string name="join_phone_1">Mobile phone number (representative)</string>
    <string name="join_phone_1_hint">Enter your mobile phone number (representative). - except</string>
    <string name="join_telephone_1">Phone number (representative)</string>
    <string name="join_telephone_1_hint">Please enter your phone number (representative). - except</string>
    <string name="join_email_1">Email (representative)</string>
    <string name="join_email_1_hint">Please enter your email (representative).</string>
    <string name="join_title">Title</string>
    <string name="join_title_hint">Please enter your title.</string>
    <string name="join_name_2">Name (in charge)</string>
    <string name="join_name_2_hint">Please enter your name (in charge).</string>
    <string name="join_phone_2">Mobile phone number (in charge)</string>
    <string name="join_phone_2_hint">Enter your mobile phone number (in charge). - except</string>
    <string name="join_telephone_2">Phone number (in charge)</string>
    <string name="join_telephone_2_hint">Enter your phone number (in charge). - except</string>
    <string name="join_email_2">Email (in charge)</string>
    <string name="join_email_2_hint">Please enter your email (in charge).</string>
    <string name="join_address">Address</string>
    <string name="join_address_hint">Please enter your address.</string>
    <string name="menu_measure_management">Measure Management</string>
</resources>