<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoEdit.EditPhoneActivity"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/edit_pw_dismiss_btn"
            android:paddingLeft="8dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24px"
            android:layout_width="50dp"
            android:layout_height="match_parent" />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/user_info_edit_pw"
            android:textColor="#cc1b17"
            android:textSize="24dp" />
    </LinearLayout>
    <View
        android:background="#cc1b17"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="20dp"
        android:textColor="#000"
        android:text="@string/user_info_edit_pw_current_pw"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/edit_current_pw"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/user_info_edit_pw_current_pw_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="20dp"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:text="@string/user_info_edit_pw_new_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/edit_new_pw"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/user_info_edit_pw_new_pw_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/edit_confirm"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/user_info_edit_pw_confirm_pw_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_gravity="bottom"
            android:id="@+id/btn_save_pw"
            android:textColor="#fff"
            android:background="@color/color_grey"
            android:text="@string/btn_complete"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>




</LinearLayout>