<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_ble_connect_title"
        android:textColor="#000000"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/ble_connect_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_ble_message"
        android:layout_marginTop="24dp"
        android:textSize="24dp"
        android:gravity="center"
        android:text="@string/toast_please_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textColor="@color/color_white"
        android:background="@drawable/button_background_colored"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:id="@+id/btn_ble"
        android:text="@string/ble_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:visibility="gone"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background_colored"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:id="@+id/btn_backup"
        android:text="@string/load_backup_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background_colored"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:id="@+id/btn_logout"
        android:text="@string/menu_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/hidden"
            android:layout_gravity="bottom|center"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </FrameLayout>

</LinearLayout>