<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <com.ssomai.android.scalablelayout.ScalableLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        app:scale_base_height="650"
        app:scale_base_width="400">

        <ImageView
            android:id="@+id/join_6_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24px"
            app:scale_height="30"
            app:scale_left="10"
            app:scale_top="20"
            app:scale_width="30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up_survay"
            android:textColor="#000"
            app:scale_height="30"
            app:scale_left="100"
            app:scale_textsize="24"
            app:scale_top="20"
            app:scale_width="200" />
        <TextView
            app:scale_height="80"
            app:scale_left="25"
            app:scale_textsize="16"
            app:scale_top="70"
            app:scale_width="350"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#737373"
            android:layout_marginTop="16dp"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/sign_up_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            app:scale_height="80"
            app:scale_left="25"
            app:scale_top="150"
            app:scale_width="350"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:enabled="false"
                android:visibility="invisible"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:text="예"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:layout_weight="1"
                android:text="@string/sign_up_yes"
                android:id="@+id/radio_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:layout_weight="1"
                android:text="@string/sign_up_no"
                android:id="@+id/radio_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:enabled="false"
                android:visibility="invisible"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:text="예"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <RadioGroup
            app:scale_height="150"
            app:scale_left="25"
            app:scale_textsize="16"
            app:scale_top="230"
            app:scale_width="350"
            android:id="@+id/radio_yes_select"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_1"
                android:text="@string/sign_up_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/radio_2"
                android:text="@string/sign_up_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/radio_3"
                android:text="@string/sign_up_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/radio_4"
                android:text="@string/sign_up_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>
    </com.ssomai.android.scalablelayout.ScalableLayout>



    <Button
        android:layout_gravity="bottom"
        android:id="@+id/join_6_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_grey"
        android:text="@string/btn_next"
        android:textColor="#fff" />


</FrameLayout>





